RESOLVED FIXED314411
REGRESSION(312862@main): Broken win-build
https://bugs.webkit.org/show_bug.cgi?id=314411
Summary REGRESSION(312862@main): Broken win-build
Marta Darbinyan
Reported 2026-05-08 09:32:15 PDT
Win-build is broken after 312861@main C:\\BW\\Win-Build-EWS\\build\\Source\\WebCore\\accessibility\\win\\AXObjectCacheWin.cpp(141,24): error: no matching member function for call to 'getOrCreate' 141 | RefPtr axWebArea = getOrCreate(*renderView); Link:https://ews-build.webkit.org/#/builders/59/builds/117400/steps/14/logs/stdio
Attachments
Marta Darbinyan
Comment 1 2026-05-08 09:33:08 PDT
Correction: broken after 312862@main.
Radar WebKit Bug Importer
Comment 2 2026-05-08 09:46:25 PDT
EWS
Comment 3 2026-05-08 09:51:05 PDT
Committed 312892@main (84f242a43b2e): <https://commits.webkit.org/312892@main> Reviewed commits have been landed. Closing PR #64557 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.