REGRESSION(312862@main): Broken win-build rdar://176563099 https://bugs.webkit.org/show_bug.cgi?id=314411

Unreviewed build fix; add missing include statement.

* Source/WebCore/accessibility/win/AXObjectCacheWin.cpp:

Canonical link: https://commits.webkit.org/312892@main